2013-10-20 German Arias <germanandre@gmx.es>

	* English.lproj/Preferences.gorm:
	* Modules/Preferences/Build/Resources/BuildPrefs.gorm:
	* Modules/Preferences/EditorFSC/Resources/EditorFSCPrefs.gorm:
	* Modules/Preferences/Saving/Resources/SavingPrefs.gorm:
	* Modules/Preferences/Misc/Resources/MiscPrefs.gorm: Change the height
	of the panel.

2013-10-15 German Arias <germanandre@gmx.es>

	* TextFinder.h:
	* TextFinder.m: Deleted.
	* GNUmakefile: Remove TextFinder.
	* PCMenuController.m: Remove TextFinder. Now we use the standard
	menu Find.

2013-10-13 German Arias <germanandre@gmx.es>

	* English.lproj/ProjectCenter.gorm: Use the standard menu Find and
	connect option "Line Number..." to first responder.
	* Modules/Editors/ProjectCenter/PCEditor.m: Use Find panel.
	* Headers/PCMenuController.h:
	* PCMenuController.m: Remove unnecessary methods.

2013-10-06 German Arias <germanandre@gmx.es>

	* Headers/PCPrefController.h:
	* PCPrefController.m: Don't retain the user defaults. And don't call
	synchronize every time, this are causing conflicts with defaults of the
	PC windows, which stores its frames here.

2013-09-24 German Arias <germanandre@gmx.es>

	* PCAppController.m (-applicationDidFinishLaunching: and
	-applicationShouldTerminate:) Code to handle the style
	NSWindows95InterfaceStyle.
	* Headers/ProjectCenter/PCAuxiliaryWindow.h:
	* Framework/PCAuxiliaryWindow.m: Add this class for auxiliary windows.
	This is windows that don't should add the in-window menu.
	* Framework/English.lproj/BuilderPanel.gorm:
	* Modules/Editors/ProjectCenter/PCEditor.m: Use the new class
	PCAuxiliaryWindow.
	* Framework/GNUmakefile: Add new class.

2013-09-22 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Do not advance start and get startType if we are at the end anyway.

	* Modules/Parsers/ProjectCenter/ObjCClassHandler.h
	* Modules/Parsers/ProjectCenter/ObjCClassHandler.m
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.h